[gd_scene load_steps=16 format=2]

[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_14.png" type="Texture" id=1]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_16.png" type="Texture" id=2]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_09.png" type="Texture" id=3]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_12.png" type="Texture" id=4]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_01.png" type="Texture" id=5]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_00.png" type="Texture" id=6]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_02.png" type="Texture" id=7]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_08.png" type="Texture" id=8]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_10.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Enemies/Enemy4.gd" type="Script" id=10]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_11.png" type="Texture" id=11]
[ext_resource path="res://GFX/Enemies/ninja enemy/sprite_07.png" type="Texture" id=12]
[ext_resource path="res://SFX/257709__vmgraw__grunt-2.wav" type="AudioStream" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 1.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "dying",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.1222, 67.3632 )

[node name="Enemy4" type="KinematicBody2D"]
position = Vector2( 0, -1.58112 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.270538, 0.475647 )
frames = SubResource( 1 )
animation = "walk"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17.7651, 39.2301 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 19.8864, 98.9539 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="Vanish" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Dying" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="grunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="hurt" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="attacking" type="Timer" parent="."]
wait_time = 0.8

[node name="viewR" type="RayCast2D" parent="."]
position = Vector2( 14, 26 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 200 )

[node name="viewL" type="RayCast2D" parent="."]
position = Vector2( -14, 26 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 200 )

[node name="collisionA" type="Timer" parent="."]
wait_time = 0.2

[node name="delay" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 142.095, -85.4693 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Vanish" to="." method="_on_Vanish_timeout"]
[connection signal="timeout" from="Dying" to="." method="_on_Dying_timeout"]
[connection signal="timeout" from="hurt" to="." method="_on_hurt_timeout"]
[connection signal="timeout" from="attacking" to="." method="_on_attacking_timeout"]
